@@ -70,6 +70,7 @@
 #include "tools/gt_ltrharvest.h"
 #include "tools/gt_matchingstatistics.h"
 #include "tools/gt_merge.h"
+#include "tools/gt_mergefeat.h"
 #include "tools/gt_mgth.h"
 #include "tools/gt_mkfmindex.h"
 #include "tools/gt_mmapandread.h"
@@ -128,6 +129,7 @@ GtToolbox* gtt_tools(void)
   gt_toolbox_add(tools, "ltrharvest", gt_ltrharvest);
   gt_toolbox_add(tools, "matstat", gt_matchingstatistics);
   gt_toolbox_add(tools, "merge", gt_merge);
+  gt_toolbox_add_tool(tools, "mergefeat", gt_mergefeat());
   gt_toolbox_add(tools, "mgth", gt_mgth);
   gt_toolbox_add(tools, "mmapandread", gt_mmapandread);
   gt_toolbox_add_tool(tools, "mutate", gt_mutate());
