@@ -1,6 +1,7 @@
 changes in version 1.3.3 (2009-04-30)
 
 - new tool `gt interfeat` added
+- new tool `gt mergefeat` added
 
 
 changes in version 1.3.2 (2009-04-29)
